# ft_sklearn

./: .gitignore  README.md  pyproject.toml  tests.ipynb
src/ft_sklearn/: base.py
src/ft_sklearn/cluster/: KMeans.py
src/ft_sklearn/decomposition/: PCA.py  __init__.py
src/ft_sklearn/ensemble/: GradientBoostingClassifier.py  RandomForestClassifier.py  __init__.py
src/ft_sklearn/linear_model/: LinearRegression.py  LogisticRegression.py  SGDRegressor.py  __init__.py
src/ft_sklearn/metrics/: __init__.py  classification.py  regression.py
src/ft_sklearn/model_selection/: train_test_split.py
src/ft_sklearn/naive_bayes/: GaussianNB.py  __init__.py
src/ft_sklearn/neighbors/: KNeighborsClassifier.py  __init__.py
src/ft_sklearn/preprocessing/: MinMaxScaler.py  RobustScaler.py  StandardScaler.py  __init__.py
src/ft_sklearn/svm/: SVC.py  __init__.py
src/ft_sklearn/tree/: DecisionTreeClassifier.py  __init__.py
src/ft_sklearn/utils/: __init__.py  type_check.py
test/: test_LinearRegression.py  test_RobustScaler.py  test_decision_tree_classifier.py  test_gaussian_nb.py  test_gradient_boosting_classifier.py  test_metrics  test_pca.py  test_svc.py
tests/: test_MinMaxScaler.py  test_StandardScaler.py  test_kmeans.py  test_kneighbors_classifier.py  test_linear_regression.py  test_logistic_regression.py  test_random_forest_classifier.py  test_sgd_regressor.py  test_train_test_split.py
